# operation-dbus

./: .cursorrules.md  .env.example  .profile  ACCESS_WEB_UI.md  ACTIONABLE-ITEMS.md  AGENTS.md  AI_MODEL_CONFIGURATION.md  ARCHITECTURE-ANALYSIS.md  ARCHITECTURE-SUMMARY.md  BIOS-FEATURE-UNLOCK.md  BRANCH-COMPARISON-GUIDE.md  BRANCH-COMPARISON-STATUS.md  BRANCH-PROTECTION-CONFIGURED.md  BROKEN_CODE_ANALYSIS.md  BTRFS-CACHING-STRATEGY.md  BTRFS-SUBVOLUME-MANAGEMENT.md  CACHING-IMPLEMENTED.md  CACHING-STRATEGY.md  CHATBOT-DATA-IMPROVEMENTS.md  CHATGPT-HOURLY-PROMPT.txt  CHATGPT-PLUGIN-SPEC.md  CLI-COMMANDS-AUDIT.md  CLI-DESIGN.md  CODE-REVIEW-PREP.md  CODE-REVIEW-REPORT.md  CODEX-INIT-STATEMENT.md  CONTAINER-DISAPPEARANCE-FIX.md  CONTAINER-NETMAKER-SETUP.md  CONTAINER-SETUP.md  CONVERSATION-2025-11-06-mcp-build-fixes.md  COUPLING-FIXES.md  CREATE-REPO.md  CREATE-RULESETS-VIA-UI.md  Cargo.toml  DBUS_INDEXER_IMPLEMENTATION_GUIDE.md  DECLARATIVE-INSTALL-ROADMAP.md  DEEPMIND-REVIEW-PROMPT.md  DEEPSEEK-INSIGHTS.md  DEEPSEEK_INTEGRATION_STATUS.md  DEPLOY-MCP.md  (+215 more)
.claude/: settings.local.json
.cursor/rules/: mem.mdc
.github/rulesets/: NOTE.md  README.md  development-branch-protection.json  feature-branch-protection.json  main-branch-protection.json  workflow-rules.json
.github/workflows/: qodana_code_quality.yml  sync-to-mcp-fork.yml
.kilocode/: mcp.json
.zencoder/rules/: repo.md
DEEPSEEK/: deepseek_dbus.md  deepseek_gpu_guide.md  deepseek_llm_ML.md  deepsek-btrfs-blockchain.md  nix_deepmind.md
agents/: AGENT-CODE-SANDBOX.md  AGENT-EXECUTOR.md  AGENT-FILE.md  AGENT-MEMORY-BUFFER.md  AGENT-MEMORY-GRAPH.md  AGENT-MEMORY-VECTOR.md  AGENT-MONITOR.md  AGENT-NETWORK.md  AGENT-PACKAGEKIT.md  AGENT-SYSTEMD.md  AGENT-WEB-SCRAPER.md
boot/: README.md
boot/grub/: grub.cfg
boot/netboot.xyz/: README.md  netboot.xyz-grub-entry.txt  netboot.xyz.conf
boot/proxmox-iso/: .gitignore  README.md
deploy/: .gitattributes
deployment-repo/: .gitignore  .gitmessage  README.md  REPO-SUMMARY.md  setup-repo.sh  setup-rustrover-ssh-local.sh
docs/: ARCHITECTURE-CORRECTED.md  AUTO-PLUGIN-INTEGRATION.md  BLOCKCHAIN-BTRFS-NUMA-INTEGRATION.md  BOOTSTRAP-DESIGN.md  CONTAINER-CLI.md  CONTAINER-PROFILES.md  CORRECT-ARCHITECTURE.md  DBUS-COMMON-INTERFACES.md  DBUS-SERVER-FUNCTIONS.md  DEPLOYMENT-STATUS.md  DISTRIBUTED-SOCKET-NETWORK.md  DUAL-SOCKET-ARCHITECTURE.md  FINAL-ARCHITECTURE.md  HOW-APPLY-STATE-WORKS.md  INTROSPECTION-JSON-CACHE.md  MASTER-INDEX.md  MCP-API-REFERENCE.md  MCP-CHAT-CONSOLE.md  MCP-COMPLETE-GUIDE.md  MCP-DEVELOPER-GUIDE.md  MCP-PROTOCOL-SPEC.md  MEMORY-PATTERNS.md  NONNET-INTROSPECTION-INTEGRATION.md  OPTIMIZED-ARCHITECTURE.md  OVS-PERSISTENCE-SETUP.md  OVSDB-INTROSPECTION-SCHEMA.md  PLUGIN-TOML-FORMAT.md  PLUGTREE_PATTERN.md  PRIVACY-ROUTER-OBFS-LEVELS.md  PRIVACY-ROUTER-TUNNEL.md  PRIVACY-ROUTER.md  PROMPT-TEMPLATES.md  SEMANTIC-MAPPING-FORMAT.md  SIMPLE-ARCHITECTURE.md  SOCKET-MESH-ARCHITECTURE.md  TESTING-GUIDE.md  netmaker-ipv6-setup.md  nixos-ghostbridge-install-guide.md
docs/archive/: README.md
docs/examples/: nixos-ghostbridge-vps-configuration.nix
examples/: client.json.example  client.json.sudo  complete-proxmox-install.json  complete-proxmox-pve9-install.json  cursor-mcp-config.json  mcp_workflow_example.rs  openflow-state.json  plugin_workflow_example.rs  test_deepseek_integration.rs
mcp-configs/: discovery_config.toml
mcp-configs/agents/: README.md  dbus-executor.json  dbus-orchestrator.json
mcp-configs/cursor/: README.md  mcp.json
mcp-configs/systemd/: README.md  dbus-orchestrator.service
nix/: BACKUP-AND-MIGRATE.md  DBUS-NATIVE-DEPLOYMENT.md  DEPENDENCIES.md  PRIVACY-ROUTER.md  PROXMOX.md  README.md  VPS-DEPLOYMENT.md  deploy-oo1424oo.sh  deploy-vps.sh  digitalocean-netmaker-socks5.nix  flake.nix  module.nix  oo1424oo-config-simple.nix  oo1424oo-config.nix  oo1424oo-dual-network.nix  oo1424oo-dual-socket-correct.nix  oo1424oo-management.nix  oo1424oo-netmaker-warp.nix  oo1424oo-simple.nix  oo1424oo-socket-mesh.nix  package.nix  vps-config.nix  vps-ovs-correct.nix  vps-privacy-router.nix  vps-simple.nix
nixos/: README.md  configuration.nix  flake.nix  module.nix  validate-config.sh
op-dbus-packagekit-implementation/: introspection-results.json  main-configuration.nix  nixos-configuration.nix  packagekit_fixed.rs  packagekit_plugin.rs  user-interventions.md
reports/: security-assessment.md
rust-modules/openflow/: Cargo.toml  README.md  default.nix
rust-modules/openflow/src/: cli.rs  dbus.rs  error.rs  lib.rs  main.rs  manager.rs
scripts/: auto-snapshot-dbus-index.sh  install-privacy-router.sh  vps-setup.sh  warm-dbus-cache.sh
src/: deepseek_chat.rs  isp_migration.rs  isp_support.rs  lib.rs  main.rs  main.rs.backup  nix_introspect.rs  snapshot.rs
src/cache/: mod.rs  (+3 more)
staging/: STAGING-LAYOUT.md  STAGING-MANIFEST.yaml  op-dbus-stage  op-dbus-stage-v2
states/: complete-system-state.json  deploy-workflow.json  full-system-workflow.json  master-deploy-workflow.json  mcp-config.json  network-ovs-bridge.json  network-workflow.json  privacy-network-workflow.json  role-masks.json
systemd/: README.md  ai-chat-server.service  dbus-cache-warmup.service  dbus-cache-warmup.timer  dbus-mcp.service  deepseek-chat-server.service  op-dbus-index.service  op-dbus-index.timer  openvswitch.service  ovs-vswitchd.service  ovsdb-server.service
templates/: README.md  ovs-add-port-to-existing-bridge.json  ovs-bridge-basic.json  ovs-bridge-multiple-ports.json  ovs-bridge-with-dhcp.json  ovs-bridge-with-internal-port.json
tests/: introspection_cache_test.rs
tools/: bootstrap-minimal.sh  create-ovs-bridge.sh  deploy-proxmox-base.sh  download-proxmox-base.sh  inspect-ovsdb.sh  install-netboot-xyz.sh  install-proxmox-pve9.sh  install-proxmox-to-esp.sh  install-proxmox-vps.sh  patch-proxmox-iso.sh  quick-test-pve8.sh  quick-test-pve9.sh  upgrade-to-trixie.sh
tools/proxmox-extractor/: Cargo.toml  README.md  download-pve9.sh  extract-iso.sh  first-stage-install.sh  quick-start.sh
tools/proxmox-extractor/src/: manifest.rs  packagekit.rs  parser.rs  types.rs
(+179 files in other folders)
