[package]
name = "op-dbus"
version = "0.1.0"
edition = "2021"
authors = ["GhostBridge Team"]
description = "Operation D-Bus - Declarative system state management via native protocols"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "signal"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# D-Bus
zbus = { version = "4", features = ["tokio"] }

# Netlink (native kernel networking)
rtnetlink = { version = "0.14", features = ["tokio_socket"] }
netlink-packet-route = "0.19"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Async utilities
async-trait = "0.1"

# Web server (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
mime_guess = { version = "2.0", optional = true }

# Hashing & crypto
sha2 = "0.10"
md5 = "0.7"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Caching
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1.3"

# System info
gethostname = "0.5"
num_cpus = "1.16"
base64ct = "=1.7.3"

# ML/Transformers (optional, for advanced vectorization)
ort = { version = "2.0.0-rc.10", optional = true, features = ["download-binaries"] }
tokenizers = { version = "0.20", optional = true }
ndarray = { version = "0.16", optional = true }
once_cell = { version = "1.19", optional = true }
hf-hub = { version = "0.3", optional = true, features = ["tokio"] }
indicatif = { version = "0.17", optional = true }

[features]
default = ["web"]
# Enable transformer-based vectorization components
ml = ["ort", "tokenizers", "ndarray", "once_cell", "hf-hub", "indicatif"]
# Enable web UI server
web = ["axum", "tower", "tower-http", "mime_guess"]
# Minimal build that disables network DBus/system clients requiring OpenSSL
minimal = []

[[bin]]
name = "op-dbus"
path = "src/main.rs"


