[package]
name = "openflow-dbus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openflow-dbus"
path = "src/main.rs"

[dependencies]
zbus = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
colored = "2.0"

[dev-dependencies]
tokio-test = "0.4"
