[package]
name = "proxmox-extractor"
version = "0.1.0"
edition = "2021"
authors = ["GhostBridge Team"]
description = "Extract Proxmox VE installation plan and translate to PackageKit D-Bus"

[[bin]]
name = "proxmox-extract"
path = "src/extract.rs"

[[bin]]
name = "proxmox-manifest"
path = "src/manifest.rs"

[[bin]]
name = "proxmox-packagekit"
path = "src/packagekit.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "io-util", "process"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# D-Bus
zbus = { version = "4", features = ["tokio"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Debian package parsing
flate2 = "1.0"  # For .gz decompression
tar = "0.4"      # For extracting archives
walkdir = "2"    # For filesystem traversal

# Graph algorithms (for dependency resolution)
petgraph = "0.6"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Async utilities
async-trait = "0.1"
